--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Chevreuil Clement, Noncher-Gillet Clément"/>
 <meta name="description" content="desc"/>
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
-<link rel="stylesheet" type="text/css" href="css.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 	</head>
 	<body>
 
