--- a/index.html
+++ b/index.html
@@ -1,56 +1,119 @@
+
 <!DOCTYPE html> <!--déclare type html-->
+
 <html>
+
 	<head> <!--contient métadonnées+liens-->
+
 <title> VrReality </title></span>
+
 <meta charset= "UTF-8"/>
+
 <meta http-equiv="Content-Type" content = "text/html"/>
+
 <meta name="author" content="Chevreuil Clement, Noncher-Gillet Clément"/>
+
 <meta name="description" content="desc"/>
+
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
+
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
+
 	</head>
+
 	<body>
 
+
+
 <h1 style="background-color: rgba(255, 255, 255, 0.5)"> <center> La Technologie de demain </center></h1>
+
 <h2> <center>La Réalité Virtuelle </center> </h2>
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% height=auto /></center>
+
+<h2 style="background-color: rgba(255, 255, 255, 0.5)"> <center> <a href="#mon_ancre">Definition et histoire</a> | <a href="#mon_ancre2">Notice</a> | <a href="#mon_ancre3">Actualité</a> | <a href="#mon_ancre4">Auteurs</a>  </center></h2>
+
+
+
+
+
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
 
 <center>
-<br><element><br> <center><h3> Auteurs :</h3>
+
+<br><element><br> <center><h3 id="mon_ancre4"> Auteurs: </h3>
+
 <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598245-clemchev.png width=25% height=auto /> <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598252-cng.png width=25% height=auto />
+
 <br>Clément    |   Clément </br>
+
 <br>     Chevreuil  | Noncher-Gillet </br> 
+
 <br>18 ans     |   19 ans</br>
+
 <br>Nous avons réalisé notre tout premier site en l'honneur de notre projet durant notre premier semestre de BTS SIO.</br>
 
-</p></center> </element></center>
+</p></center> </element>
+
+</center>
+
 	 
 
+
+
 <center><br><element1></br>
-	 <center> <h3><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />  Définition et Histoire <img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
+
+	 <center> <h3 id="mon_ancre"><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />Définition et Histoire<img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
+
 	 <p>VR signifie "Virtual Reality", ce qui signifie Réalité Virtuelle en français.
+
 	 La VR permet d'immerger l'utilisateur muni d'un accessoire (casque par exemple) dans un monde virtuel.
+
 	 Même si aujourd'hui la publicité essaie plus d'attirer avec des jeux vidéos utilisant la VR, il faut 
+
 	 savoir qu'au début, ce n'était pas le cas du tout, et qu'aujourd'hui, elle n'est pas utilisée seulement pour cela.
+
 	 La première invention similaire aux casques VR d'aujourd'hui a été inventé en 1956, par Ivan Sutherland.
+
      Il a inventé le "Sensorama", il servait seulement à regarder la télévision, et, seulement 3 années après, 
+
 	 Ivan améliore son invention en inventant des casques, utilisés pour l'entraînement de pilotes, et 3 ans après,
+
 	 il continuera encore de l'améliorer.
+
 	<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539592153-sensorama-morton-heilig-virtual-reality-headset.jpg
+
  width=25% height=auto /></center>
+
 	 En 1982, suite à un programme lancé en 1978, le casque "VCASS" (Virtually Coupled Airborne Systems Simulator) voit le jour.
+
 	 En 1989, la NASA lance un programme simulant un voyage sur Mars.C'est dans le début des années 90 que les jeux 
+
 	 vidéos VR commencent réellement à se développer (W industries, Virtuality). </p>
-	 <h3><img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /> Notice <img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /></h3>
-	 <h3><img src=http://www.psychanalyste-montpellier.com/mobile/images/news.png width=5% height=auto />  Actualité <img src=http://www.psychanalyste-montpellier.com/mobile/images/news.png width=5% height=auto />  </h3>
+
+	 <h3 id="mon_ancre2"><img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /> Notice <img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /></h3>
+	 
+	 <p> Comment utiliser la VR? Ici seront regroupés les conseils qui sont communs pour tous les accessoires de type VR, pour plus de précisions, je vous invite à consulter notre page [lien cliquable] qui expliquera cas par cas
+		comment et à quoi servent chaques accessoires de VR qui existent et qui sont utilisés aujourd'hui.
+		Tout d'abord, cela dépend de quel type d'accessoire vous souhaitez utiliser. Avant toute chose, sachez que certaines personnes ne sont pas "aptes" à se plonger dans un monde de réalité virtuelle, ou bien pas
+		sur une longue durée. Cela est inutile de vous forcer si l'expérience n'est pas agréable ou tenable. Installez vous dans l'espace le plus grand possible, avec le moins d'obstacles (meubles, etc), avec un sol plat, afin de ne pas
+		vous blesser ou d'abîmer ce qu'il y a autour de vous. Sachez que vous pouvez utiliser la VR pour beaucoup de choses différentes, cela peut aller de jouer à un jeu vidéo, en passant par visiter un appartement/maison, ou bien même regarder
+		des vidéos 360° sur YouTube (ou autre plateforme). </p>
+
+	 <h3 id="mon_ancre3"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Actualité <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
+	 <p> La VR étant une technologie en pleine expansion, que ce soit dans les nouveautés ou bien les innovations, l'actualité change quotidiennement, une page entière munies de plusieurs articles est consacrée à l'actualité
+	 de la VR : [lien cliquable] </p>
+
 	 </center> </element1> </center>
 
- 
 
-</body>
+
 <center>
-<footer>
+
+<element2>
+
 <center> <p><a href="#">Aller en haut de page</a></p></center>
-</footer>
+
+</element2>
+
 </center>
+</body>
 </html>
