--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<head> <!--contient métadonnées+liens-->
 
-<title> VrReality </title></span>
+<title> VT VR </title></span>
 
 <meta charset= "UTF-8"/>
 
@@ -22,14 +22,16 @@
 	</head>
 
 	<body>
-
-
-
-<h1 style="background-color: rgba(255, 255, 255, 0.5)"> <center> La Technologie de demain </center></h1>
+	
+	<element3>
+<img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png width=28% height=auto />
+    </element3>
+	
+<h1> <center> La Technologie de demain </center></h1>
 
 <h2> <center>La Réalité Virtuelle </center> </h2>
 
-<h2 style="background-color: rgba(255, 255, 255, 0.5)"> <center> <a href="#mon_ancre">Definition et histoire</a> | <a href="#mon_ancre2">Notice</a> | <a href="#mon_ancre3">Actualité</a> | <a href="#mon_ancre4">Auteurs</a>  </center></h2>
+<h2 style="background-color: rgba(255, 255, 255, 0.5)"> <center> <a href="#Définition_et_Histoire">D&eacutefinition et Histoire</a> | <a href="#Notice">Notice</a> | <a href="#Actualité">Actualit&eacute</a> | <a href="#Auteurs">Auteurs</a>  </center></h2>
 
 
 
@@ -39,7 +41,7 @@
 
 <center>
 
-<br><element><br> <center><h3 id="mon_ancre4"> Auteurs: </h3>
+<br><element><br> <center><h3 id="Auteurs"> Auteurs: </h3>
 
 <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598245-clemchev.png width=25% height=auto /> <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598252-cng.png width=25% height=auto />
 
@@ -49,7 +51,7 @@
 
 <br>18 ans     |   19 ans</br>
 
-<br>Nous avons réalisé notre tout premier site en l'honneur de notre projet durant notre premier semestre de BTS SIO.</br>
+<br>Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</br>
 
 </p></center> </element>
 
@@ -61,7 +63,7 @@
 
 <center><br><element1></br>
 
-	 <center> <h3 id="mon_ancre"><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />Définition et Histoire<img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
+	 <center> <h3 id="Définition_et_Histoire"><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />Définition et Histoire<img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
 
 	 <p>VR signifie "Virtual Reality", ce qui signifie Réalité Virtuelle en français.
 
@@ -89,7 +91,7 @@
 
 	 vidéos VR commencent réellement à se développer (W industries, Virtuality). </p>
 
-	 <h3 id="mon_ancre2"><img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /> Notice <img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /></h3>
+	 <h3 id="Notice"><img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /> Notice <img src=https://png.icons8.com/ios/1600/user-manual.png width=5% height=auto /></h3>
 	 
 	 <p> Comment utiliser la VR? Ici seront regroupés les conseils qui sont communs pour tous les accessoires de type VR, pour plus de précisions, je vous invite à consulter notre page [lien cliquable] qui expliquera cas par cas
 		comment et à quoi servent chaques accessoires de VR qui existent et qui sont utilisés aujourd'hui.
@@ -98,7 +100,7 @@
 		vous blesser ou d'abîmer ce qu'il y a autour de vous. Sachez que vous pouvez utiliser la VR pour beaucoup de choses différentes, cela peut aller de jouer à un jeu vidéo, en passant par visiter un appartement/maison, ou bien même regarder
 		des vidéos 360° sur YouTube (ou autre plateforme). </p>
 
-	 <h3 id="mon_ancre3"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Actualité <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
+	 <h3 id="Actualité"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Actualité <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
 	 <p> La VR étant une technologie en pleine expansion, que ce soit dans les nouveautés ou bien les innovations, l'actualité change quotidiennement, une page entière munies de plusieurs articles est consacrée à l'actualité
 	 de la VR : [lien cliquable] </p>
 
