--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style3.css" media="all" />
 
 	</head>
 
@@ -27,30 +27,22 @@
 
 <h2> <center>La Réalité Virtuelle </center> </h2>
 
-
 <center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
 
 
 <center><br><element1></br>
-<h3 id="Actualité"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Développement <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
-<p> 
 
-Il existe de nombreux groupes de logiciels permettant de programmer des applications VR. Les plus connus/utilisés sont les suivants : Unity, Android NDK, Unreal, iOS, mais il y a également OpenVR par exemple,
-notamment utilisé pour l’HTC Vive.
-<br> </br>
+<img src=http://image.noelshack.com/fichiers/2018/42/1/1539598245-clemchev.png width=25% height=auto /> <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598252-cng.png width=25% height=auto />
 
-Il existe également des frameworks afin de développer des applications VR, qui sont LibGDX, A-Frame, WebVR, Primrose, React VR (compatible JavaScript), Argon.js
-<br> </br>
+<br>Clément    |   Clément </br>
 
-<B> Les langages de programmation : </B>
-<br> </br>
+<br>     Chevreuil  | Noncher-Gillet </br> 
 
-Il existe de nombreux langages de programmation utilisés pour développer des applications de réalité virtuelle. Ci-dessous l’image présente les langages les plus utilisés par les développeurs d’applications VR.
- La raison pour laquelle le C# est le langage le plus utilisé est dû au fait que ce langage est adapté à Unity, et Unity est le plus adapté au langage C#.</p>
- <center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542614909-langagesvr.jpg /></center>
-</center> </element1> </center>
+<br>18 ans     |   19 ans</br>
 
+<br>Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</br>
 
+</p></center> </element1>
 
 
 
@@ -67,12 +59,11 @@ Il existe de nombreux langages de programmation utilisés pour développer des a
 	<div class="table">
 	
 	<ul>
-	
-	<li class "menu-ind">
+	<li class "menu-exp">
 	<a href="index.html">Accueil</a>
 	</li>
 	<br> </br>
-	<li class "menu-exp">
+	<li class "menu-ind">
 	<a href="index1.html">Définition et Histoire</a>
 	</li>
 	<br> </br>
