--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Il existe également des frameworks afin de développer des applications VR, qui
 
 Il existe de nombreux langages de programmation utilisés pour développer des applications de réalité virtuelle. Ci-dessous l’image présente les langages les plus utilisés par les développeurs d’applications VR.
  La raison pour laquelle le C# est le langage le plus utilisé est dû au fait que ce langage est adapté à Unity, et Unity est le plus adapté au langage C#.</p>
- <center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542614909-langagesvr.jpg /></center>
+ <center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542644575-graph.png /></center>
 </center> </element1> </center>
 
 
