Premier edit V3, librairie graphique + contenu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
+<link rel="stylesheet" href="knacss.css">
+
 	</head>
 
 	<body>
@@ -34,7 +36,7 @@
 <center><br><element1></br>
 <h3 id="Actualité"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Développement <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
 <p> 
-
+<br></br>
 Il existe de nombreux groupes de logiciels permettant de programmer des applications VR. Les plus connus/utilisés sont les suivants : Unity, Android NDK, Unreal, iOS, mais il y a également OpenVR par exemple,
 notamment utilisé pour l’HTC Vive.
 <br> </br>
@@ -80,12 +82,16 @@ Il existe de nombreux langages de programmation utilisés pour développer des a
 	<a href="index2.html">Notice</a>
 	</li>
 	<br> </br>
+	<br> </br>
 	<li class "menu-exp">
 	<a href="index3.html">Auteurs</a>
 	</li>
 	<br> </br>
-	<li class "menu-hob">
+	<li class "menu-exp">
 	<a href="index4.html">Google Cardboard</a>
+	</li>
+	<li class "menu-hob">
+	<a href="index5.html">L'Art Numérique</a>
 	</li>
 	
 	</ul>
