--- a/index1.html
+++ b/index1.html
@@ -19,6 +19,8 @@
 
 <link rel="stylesheet" type="text/css" href="style1.css" media="all" />
 
+<link rel="stylesheet" href="knacss.css">
+
 	</head>
 
 	<body>
@@ -33,7 +35,7 @@
 <center><br><element1></br>
 
 	 <center> <h3 id="Définition_et_Histoire"><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />Définition et Histoire<img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
-
+		<br></br>
 	 <p>VR signifie "Virtual Reality", ce qui signifie Réalité Virtuelle en français.
 
 	 La VR permet d'immerger l'utilisateur muni d'un accessoire (casque par exemple) dans un monde virtuel.
@@ -90,14 +92,17 @@
 	<a href="index2.html">Notice</a>
 	</li>	
 	<br> </br>
+	<br> </br>
 		<li class "menu-exp">
 	<a href="index3.html">Auteurs</a>
 	</li>
 	<br> </br>
-	<li class "menu-hob">
+	<li class "menu-exp">
 	<a href="index4.html">Google Cardboard</a>
 	</li>
-	
+	<li class "menu-hob">
+	<a href="index5.html">L'Art Numérique</a>
+	</li>
 	</ul>
 	
 	</div>
