--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,8 @@
 
 <link rel="stylesheet" type="text/css" href="style2.css" media="all" />
 
+<link rel="stylesheet" href="knacss.css">
+
 	</head>
 
 	<body>
@@ -33,6 +35,7 @@
 
 <center><br><element1></br>
 <h3 id="Notice"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Notice <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
+<br></br>
  <p> <B> Comment utiliser la VR?</B>
  <br> </br>
  Ici seront regroupés les conseils qui sont communs pour tous les accessoires de type VR :
@@ -57,14 +60,6 @@
 
 
 
-	 
-<center>
-<element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
-</element2>
-</center>
-
-
 <center>
 <nav>
 	<div class="table">
@@ -82,12 +77,16 @@
 	<a href="index2.html">Notice</a>
 	</li>
 	<br> </br>
+	<br> </br>
 	<li class "menu-exp">
 	<a href="index3.html">Auteurs</a>
 	</li>
 	<br> </br>
-	<li class "menu-hob">
+	<li class "menu-exp">
 	<a href="index4.html">Google Cardboard</a>
+	</li>
+	<li class "menu-hob">
+	<a href="index5.html">L'Art Numérique</a>
 	</li>
 	
 	</ul>
@@ -97,7 +96,11 @@
  </center>
 
 
-
+<center>
+<element2>
+<center> <p><a href="#">Aller en haut de page</a></p></center>
+</element2>
+</center>
 
 
 
