--- a/index3.html
+++ b/index3.html
@@ -19,6 +19,8 @@
 
 <link rel="stylesheet" type="text/css" href="style3.css" media="all" />
 
+<link rel="stylesheet" href="knacss.css">
+
 	</head>
 
 	<body>
@@ -40,7 +42,11 @@
 
 <br>18 ans     |   19 ans</br>
 
+<br>Bac STI2D     				|   Bac ES (option Sciences Sociales et Politiques)</br>
+
 <br>Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</br>
+
+
 
 </p></center> </element1>
 
@@ -71,12 +77,16 @@
 	<a href="index2.html">Notice</a>
 	</li>
 	<br> </br>
+	<br> </br>
 	<li class "menu-exp">
 	<a href="index3.html">Auteurs</a>
 	</li>
 	<br> </br>
-	<li class "menu-hob">
+	<li class "menu-exp">
 	<a href="index4.html">Google Cardboard</a>
+	</li>
+	<li class "menu-hob">
+	<a href="index5.html">L'Art Numérique</a>
 	</li>
 	
 	</ul>
