--- a/index4.html
+++ b/index4.html
@@ -19,6 +19,7 @@
 
 <link rel="stylesheet" type="text/css" href="style4.css" media="all" />
 
+<link rel="stylesheet" href="knacss.css">
 	</head>
 
 	<body>
@@ -32,7 +33,7 @@
 
 <center><br><element1></br>
 <h3> <img src=http://image.noelshack.com/fichiers/2018/47/1/1542618792-iconegc.png  width=5% height=auto /> Google Cardboard <img src=http://image.noelshack.com/fichiers/2018/47/1/1542618792-iconegc.png  width=5% height=auto /> </h3>
-<p>
+<p><br></br>
 Tout d’abord, il faut savoir que la technologie Cardboard est légèrement différente des casques VR (comme Oculus par exemple). Google Cardboard est un casque de réalité augmentée.
 Google Cardboard est un casque de réalité augmentée, compatible avec les téléphones mobiles.
 <br> </br>
@@ -92,12 +93,16 @@ Même si l’on pousse la programmation d’une application au maximum, les tél
 	<a href="index2.html">Notice</a>
 	</li>
 	<br> </br>
+	<br> </br>
 	<li class "menu-exp">
 	<a href="index3.html">Auteurs</a>
 	</li>
 	<br> </br>
-	<li class "menu-hob">
+	<li class "menu-exp">
 	<a href="index4.html">Google Cardboard</a>
+	</li>
+	<li class "menu-hob">
+	<a href="index5.html">L'Art Numérique</a>
 	</li>
 	
 	</ul>
