--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
 
 <link rel="stylesheet" href="knacss.css">
 
+
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+<script src="script.js"></script>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+<header>
+
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
+
+</header>
+
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100%  /></center>
 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
-
-
-<center><br><element1></br>
-<h3 id="Actualité"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Développement <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
+<br><element1></br>
+<center><h3><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> DEVELOPPEMENT   </h3></center>
 <p> 
 <br></br>
 Il existe de nombreux groupes de logiciels permettant de programmer des applications VR. Les plus connus/utilisés sont les suivants : Unity, Android NDK, Unreal, iOS, mais il y a également OpenVR par exemple,
@@ -49,22 +52,22 @@ Il existe également des frameworks afin de développer des applications VR, qui
 
 Il existe de nombreux langages de programmation utilisés pour développer des applications de réalité virtuelle. Ci-dessous l’image présente les langages les plus utilisés par les développeurs d’applications VR.
  La raison pour laquelle le C# est le langage le plus utilisé est dû au fait que ce langage est adapté à Unity, et Unity est le plus adapté au langage C#.</p>
- <center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542644575-graph.png /></center>
-</center> </element1> </center>
+ <img src=http://image.noelshack.com/fichiers/2018/47/1/1542644575-graph.png />
+ </element1>
 
 
 
 
 
 	 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
 
 
-<center>
+
+<!-- <center> -->
 <nav>
 	<div class="table">
 	
