--- a/index3.html
+++ b/index3.html
@@ -17,50 +17,53 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style3.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
 
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+	<script src="script.js"></script>
+<header>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
+</header>
 
 
-<center><br><element1></br>
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
 
+
+
+
+<br><element1></br>
+<center>
 <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598245-clemchev.png width=25% height=auto /> <img src=http://image.noelshack.com/fichiers/2018/42/1/1539598252-cng.png width=25% height=auto />
 
-<br>Clément    |   Clément </br>
+<br><p>Clément    |   Clément </p></br>
 
-<br>     Chevreuil  | Noncher-Gillet </br> 
+<br><p>     Chevreuil  | Noncher-Gillet</p> </br> 
 
-<br>18 ans     |   19 ans</br>
+<br><p> 18 ans     |   19 ans</p></br>
 
-<br>Bac STI2D     				|   Bac ES (option Sciences Sociales et Politiques)</br>
+<br><p> Bac STI2D     				|   Bac ES (option Sciences Sociales et Politiques)</p></br>
 
-<br>Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</br>
-
-
-
-</p></center> </element1>
+<br><p> Nous avons réalisé notre tout premier site dans le cadre de de notre projet durant notre premier semestre de BTS SIO.</p></br>
+ </center>
+</element1>
 
 
 
 	 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
 
 
-<center>
+
+
 <nav>
 	<div class="table">
 	
@@ -93,7 +96,7 @@
 	
 	</div>
 	</nav>
- </center>
+ 
 
 
 
