--- a/index4.html
+++ b/index4.html
@@ -17,22 +17,27 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style4.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+	<script src="script.js"></script>
+<header>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
+</header>
 
 
-<center><br><element1></br>
-<h3> <img src=http://image.noelshack.com/fichiers/2018/47/1/1542618792-iconegc.png  width=5% height=auto /> Google Cardboard <img src=http://image.noelshack.com/fichiers/2018/47/1/1542618792-iconegc.png  width=5% height=auto /> </h3>
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
+
+
+
+
+<br><element1></br>
+<center><h3> <img src=http://image.noelshack.com/fichiers/2018/47/1/1542618792-iconegc.png  width=5% height=auto /> GOOGLE CARDBOARD </h3> </center>
 <p><br></br>
 Tout d’abord, il faut savoir que la technologie Cardboard est légèrement différente des casques VR (comme Oculus par exemple). Google Cardboard est un casque de réalité augmentée.
 Google Cardboard est un casque de réalité augmentée, compatible avec les téléphones mobiles.
@@ -41,8 +46,9 @@ Pour utiliser ces derniers, il faut un téléphone compatible, ainsi qu’une ap
 utilisant les services de Google Cardboard. Il suffit de télécharger l’application (sur le Playstore ou bien sur l’Apple Store selon l’appareil utilisé). Cette application permet que,
 lorsque l’on lance une application compatible avec Google Cardboards, l’affichage sur l’écran se voit séparé en deux parties, ce qui est parfaitement adapté pour les casques Google Cardboards.
 Des capteurs se trouvant dans le téléphone permettront que l’application suive le mouvement de notre tête (head-tracking), afin d’être pleinement immergé dans l’environnement dans lequel nous sommes 
-virtuellement.
+virtuellement.</p>
 <center><img src=http://image.noelshack.com/fichiers/2018/47/1/1542619550-googlegc2.png></center>
+<p>
 <br> </br>
 <B> Comment développer une application Cardboard? </B>
 <br> </br>
@@ -64,19 +70,19 @@ et qu’il nécessite seulement un téléphone portable.
 <br> </br>
 
 Même si l’on pousse la programmation d’une application au maximum, les téléphones ne seront pas aptes à faire tourner des applications similaires à ce que des consoles comme la Playstation ou bien des machines comme des ordinateurs sont capables de faire tourner. Pour finir, étant donné que son prix est bas, l’espérance de vie du casque est basse.
-</p></center> </element1>
+</p> </element1>
 
 
 
 	 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
 
 
-<center>
+
+
 <nav>
 	<div class="table">
 	
@@ -109,7 +115,7 @@ Même si l’on pousse la programmation d’une application au maximum, les tél
 	
 	</div>
 	</nav>
- </center>
+ 
 
 </body>
 </html>
