--- a/index1.html
+++ b/index1.html
@@ -17,24 +17,29 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style1.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
 
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+	<script src="script.js"></script>
+<header>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
+</header>
 
 
-<center><br><element1></br>
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
 
-	 <center> <h3 id="Définition_et_Histoire"><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />Définition et Histoire<img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto /> </h3>
+
+
+
+<br><element1></br>
+
+	  <center><h3><img src=http://www.icone-png.com/png/40/39859.png width=5% height=auto />DEFINITION ET HISTOIRE </h3></center>
 		<br></br>
 	 <p>VR signifie "Virtual Reality", ce qui signifie Réalité Virtuelle en français.
 
@@ -50,31 +55,29 @@
 
 	 Ivan améliore son invention en inventant des casques, utilisés pour l'entraînement de pilotes, et 3 ans après,
 
-	 il continuera encore de l'améliorer.
+	 il continuera encore de l'améliorer.</p>
 
-	<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539592153-sensorama-morton-heilig-virtual-reality-headset.jpg
+	<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539592153-sensorama-morton-heilig-virtual-reality-headset.jpg width=25% height=auto /></center>
 
- width=25% height=auto /></center>
-
-	 En 1982, suite à un programme lancé en 1978, le casque "VCASS" (Virtually Coupled Airborne Systems Simulator) voit le jour.
+	 <p>En 1982, suite à un programme lancé en 1978, le casque "VCASS" (Virtually Coupled Airborne Systems Simulator) voit le jour.
 
 	 En 1989, la NASA lance un programme simulant un voyage sur Mars.C'est dans le début des années 90 que les jeux 
 
 	 vidéos VR commencent réellement à se développer (W industries, Virtuality). </p>
 
-	 </center> </element1> </center>
+	  </element1> 
 
 
 
 	 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
 
 
-<center>
+
+
 <nav>
 	<div class="table">
 	
@@ -107,7 +110,7 @@
 	
 	</div>
 	</nav>
- </center>
+ 
 
 
 
