--- a/index2.html
+++ b/index2.html
@@ -17,24 +17,28 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style2.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
 
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+	<script src="script.js"></script>
+<header>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
+
+</header>
 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
 
 
-<center><br><element1></br>
-<h3 id="Notice"><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> Notice <img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto />  </h3>
+
+
+<br><element1></br>
+<center><h3><img src=https://img.icons8.com/metro/1600/news.png width=5% height=auto /> NOTICE </h3></center>
 <br></br>
  <p> <B> Comment utiliser la VR?</B>
  <br> </br>
@@ -56,11 +60,11 @@
 		<br> </br>
 		Pour finir, vous devez savoir que vous pouvez utiliser la VR pour beaucoup de choses différentes, cela peut aller de jouer à un jeu vidéo, en passant par visiter un appartement/maison, ou bien même regarder
 		des vidéos 360° sur YouTube (ou autre plateforme). </p>
-</center> </element1> </center>
+ </element1> 
 
 
 
-<center>
+
 <nav>
 	<div class="table">
 	
@@ -93,14 +97,14 @@
 	
 	</div>
 	</nav>
- </center>
+ 
 
 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
+
 
 
 
