--- a/index5.html
+++ b/index5.html
@@ -17,24 +17,28 @@
 
 <meta name="keywords" content="Veille, Techno, Technologique, Technologies, Informatique, Infos, Info, News, Nouveautés, VR, Réalité, Virtuelle, Casque, Casques, Informations"/>
 
-<link rel="stylesheet" type="text/css" href="style5.css" media="all" />
+<link rel="stylesheet" type="text/css" href="style.css" media="all" />
 
 <link rel="stylesheet" href="knacss.css">
 
 	</head>
 
 	<body>
-	
-<h1> <center><img src=http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png left=30% width=120px height=80px/> La Technologie de demain </center></h1>
+	<script src="script.js"></script>
+<header>
 
-<h2> <center>La Réalité Virtuelle </center> </h2>
+	<center> <h1> <img <img src="http://image.noelshack.com/fichiers/2018/45/1/1541404844-logo-vtvr.png" left="30%" width="120px" height="80px/"> La Technologie de demain - la réalité virtuelle</h1> </center> 
+
+</header>
 
 
-<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png  /></center>
+<center><img src=http://image.noelshack.com/fichiers/2018/42/1/1539587791-aenvoyer.png width=100% /></center>
 
 
-<center><br><element1></br>
-<h3 id="Actualité"> <img src=http://image.noelshack.com/fichiers/2018/48/1/1543227650-paletteicone.png width=5% height=auto /> L'art Numérique <img src=http://image.noelshack.com/fichiers/2018/48/1/1543227650-paletteicone.png width=5% height=auto /> </h3>
+
+
+<br><element1></br>
+<center><h3> <img src=http://image.noelshack.com/fichiers/2018/48/1/1543227650-paletteicone.png width=5% height=auto /> L'ART NUMERIQUE </h3></center>
 <p> 
 <br></br>
 <B> De l'art numérique ? Qu'est-ce ? </B>
@@ -50,7 +54,7 @@ immergé dans l'oeuvre donne un sentiment de rapproche de l'oeuvre pour celui qu
 
 <br> </br>
 
-<center><img src=http://image.noelshack.com/fichiers/2018/48/1/1543226944-serpentjonvr.jpg /></center>
+<img src=http://image.noelshack.com/fichiers/2018/48/1/1543226944-serpentjonvr.jpg />
 
 
 <br> </br>
@@ -66,21 +70,21 @@ virtuellement la mise en scène de son film, en bref, se mettre à la place d'un
 permettant de sculpter ou bien d'effectuer des graffitis (Kingspray Graffiti), pour résumer, comme nous pouvons le constater, il existe maintes et maintes applications qui touchent l'art 
 et qui permettent l'art d'évoluer.
 </p>
-</center> </element1> </center>
+ </element1> 
 
 
 
 
 
 	 
-<center>
+
 <element2>
-<center> <p><a href="#">Aller en haut de page</a></p></center>
+<center> <a href="#"><p><i class="icon-arrow--up"></i></p></a> </center>
 </element2>
-</center>
 
 
-<center>
+
+
 <nav>
 	<div class="table">
 	
@@ -114,7 +118,7 @@ et qui permettent l'art d'évoluer.
 	
 	</div>
 	</nav>
- </center>
+ 
 
 
 
