--- a/index3.html
+++ b/index3.html
@@ -96,11 +96,10 @@ Noncher-Gillet Clément : <button type="button" class="btn btn-primary" data-tog
     </div>
   </div>
 </div>
-<br> </br>
-Chevreuil Clément : <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+Chevreuil Clément : <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter1">
   Afficher Profil
 </button>
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="exampleModalCenter1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -118,6 +117,8 @@ Chevreuil Clément : <button type="button" class="btn btn-primary" data-toggle="
     </div>
   </div>
 </div>
+<br> </br>
+
  </center>
  <br> </br>
 </element1>
